5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1602_2049.log
== TEST (2019-03-27 12:48:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

X = input()
Y = input()

print(dividendo = quociente * divisor + resto)

dividendo = print()
divisor = print()
quociente = print()
resto = print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(dividendo = quociente * divisor + resto)
NameError: name 'quociente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:50:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

X = input()
Y = input()

print(dividendo = quociente * divisor + resto)

dividendo = print(int())
divisor = print(int())
quociente = print(int())
resto = print(int())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(dividendo = quociente * divisor + resto)
NameError: name 'quociente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:51:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

dividendo = input()
divisor = input()

print(dividendo = quociente * divisor + resto)

dividendo = print(int())
divisor = print(int())
quociente = print(int())
resto = print(int())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(dividendo = quociente * divisor + resto)
NameError: name 'quociente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
